--- a/my.html
+++ b/my.html
@@ -1,45 +1,71 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Rock Paper Scissors Game</title>
+    <title>Basic Graphic Game</title>
     <style>
-        /* Basic styling for the game */
+        /* Basic styling for the canvas */
         body {
-            font-family: Arial, sans-serif;
-            text-align: center;
+            margin: 0;
+            overflow: hidden;
+        }
+        canvas {
+            background-color: #f0f0f0;
+            display: block;
+            margin: auto;
         }
     </style>
 </head>
 <body>
-    <h1>Rock Paper Scissors Game</h1>
-    <p>Choose your move:</p>
-    <button onclick="playGame('rock')">Rock</button>
-    <button onclick="playGame('paper')">Paper</button>
-    <button onclick="playGame('scissors')">Scissors</button>
-    <p id="result"></p>
+    <canvas id="gameCanvas" width="800" height="600"></canvas>
 
     <script>
-        // JavaScript code for the game logic
-        function playGame(playerMove) {
-            const moves = ['rock', 'paper', 'scissors'];
-            const computerMove = moves[Math.floor(Math.random() * moves.length)];
+        const canvas = document.getElementById('gameCanvas');
+        const ctx = canvas.getContext('2d');
 
-            let result;
-            if (playerMove === computerMove) {
-                result = "It's a tie!";
-            } else if (
-                (playerMove === 'rock' && computerMove === 'scissors') ||
-                (playerMove === 'paper' && computerMove === 'rock') ||
-                (playerMove === 'scissors' && computerMove === 'paper')
-            ) {
-                result = 'You win!';
-            } else {
-                result = 'Computer wins!';
+        let x = canvas.width / 2;
+        let y = canvas.height / 2;
+        let dx = 2;
+        let dy = -2;
+        const ballRadius = 10;
+
+        function drawBall() {
+            ctx.beginPath();
+            ctx.arc(x, y, ballRadius, 0, Math.PI * 2);
+            ctx.fillStyle = '#0095DD';
+            ctx.fill();
+            ctx.closePath();
+        }
+
+        function draw() {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            drawBall();
+
+            x += dx;
+            y += dy;
+
+            if (x + dx > canvas.width - ballRadius || x + dx < ballRadius) {
+                dx = -dx;
+            }
+            if (y + dy > canvas.height - ballRadius || y + dy < ballRadius) {
+                dy = -dy;
             }
 
-            document.getElementById('result').innerHTML = `You chose ${playerMove}. Computer chose ${computerMove}. ${result}`;
+            requestAnimationFrame(draw);
         }
+
+        document.addEventListener('keydown', (event) => {
+            if (event.key === 'ArrowRight') {
+                dx = 2;
+            } else if (event.key === 'ArrowLeft') {
+                dx = -2;
+            } else if (event.key === 'ArrowUp') {
+                dy = -2;
+            } else if (event.key === 'ArrowDown') {
+                dy = 2;
+            }
+        });
+
+        draw();
     </script>
 </body>
 </html>
-
