snake game html

--- a/my.html
+++ b/my.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Snake Game</title>
+    <title>Graphical Snake Game</title>
     <style>
-        /* Basic styling for the game */
+        /* Basic styling */
         body {
             margin: 0;
             display: flex;
@@ -15,7 +15,7 @@
         }
 
         canvas {
-            border: 1px solid #333;
+            border: 2px solid #333;
             background-color: #ddd;
         }
     </style>
