--- a/my.html
+++ b/my.html
@@ -2,26 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Graphical Snake Game</title>
+    <title>Car Racing Game</title>
     <style>
-        /* Basic styling */
+        /* Basic styling for game elements */
         body {
-            margin: 0;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
+            margin: 0;
             background-color: #f0f0f0;
         }
 
         canvas {
             border: 2px solid #333;
-            background-color: #ddd;
         }
     </style>
 </head>
 <body>
-    <canvas id="gameCanvas" width="400" height="400"></canvas>
+    <canvas id="gameCanvas" width="1280" height="720"></canvas>
     <script src="game.js"></script>
 </body>
 </html>
