--- a/my.html
+++ b/my.html
@@ -38,7 +38,7 @@
 </head>
 <body>
     <div id="gameContainer">
-        <div id="question">What is 2 + 2?</div>
+        <div id="question">how to make gobi?</div>
         <input type="text" id="answerInput">
         <button id="submitBtn">Submit Answer</button>
     </div>
